--- a/inis.html
+++ b/inis.html
@@ -22,8 +22,7 @@
     <a href ="inis/lab1/lab1.html"><li><i class="fa-solid fa-house"></i> 1 ЛР</li></a>
     <a href ="inis/lab2/lab2.html"><li><i class="fa-solid fa-house"></i> 2 ЛР</li></a>
     <a href ="inis/lab3-4/index.html"><li><i class="fa-solid fa-house"></i> 3-4 ЛР</li></a>
-    <a href ="inis/lab5/lab5.html"><li><i class="fa-solid fa-house"></i> 5 ЛР</li></a>
-    <a href ="inis/testLab6/index.html"><li><i class="fa-solid fa-house"></i> 6 Тестовая лабораторная</li></a>
+    <a href ="inis/lab5/lab5.html"><li><i class="fa-solid fa-house"></i> 5-6 ЛР</li></a>
   </ul>
 </aside>
 <main>
